# remove-tos-tweet

./: CHANGELOG.md  LICENSE  README.md  com.github.y-muen.remove-tos-tweet.plist  pyproject.toml
Remove_tos_tweet/: __init__.py
remove_tos_tweet/: __init__.py  __main__.py  config.py  remover.py
tests/: __init__.py  test_remove_tos_tweet.py
